--- a/checkout.html
+++ b/checkout.html
@@ -78,7 +78,9 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="logo">
-                        <h1><a href="index.php">e<span>Electronics</span></a></h1>
+                        <h1><a href="
+                            
+                            php">e<span>Electronics</span></a></h1>
                     </div>
                 </div>
                 
